--- a/JwtAuthAspNet7WebAPI/JwtAuthAspNet7WebAPI.csproj
+++ b/JwtAuthAspNet7WebAPI/JwtAuthAspNet7WebAPI.csproj
@@ -17,6 +17,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.9" />
   </ItemGroup>
 
   <ItemGroup>
