--- a/JwtAuthAspNet7WebAPI/Properties/launchSettings.json
+++ b/JwtAuthAspNet7WebAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5078",
+      "applicationUrl": "http://localhost:7082",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -24,7 +24,7 @@
         "dotnetRunMessages": true,
         "launchBrowser": true,
         "launchUrl": "swagger",
-        "applicationUrl": "http://localhost:5078;https://localhost:7082",
+        "applicationUrl": "https://localhost:7082",
         "environmentVariables": {
             "ASPNETCORE_ENVIRONMENT": "Development"
         }
