--- a/JwtAuthAspNet7WebAPI/JwtAuthAspNet7WebAPI.csproj
+++ b/JwtAuthAspNet7WebAPI/JwtAuthAspNet7WebAPI.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.9" />
   </ItemGroup>
